# amerigo_control

./: CMakeLists.txt  README.md  leaphand_node.py  package.xml
config/: controllers.yaml  joint_limits.yaml
include/ros_interface/: amerigo_hardware_interface.h
launch/: amerigo_control.launch  amerigo_node.launch
leap_hand_utils/: leap_hand_utils.py
scripts/: amerigo_commander.py  amerigo_node.py
src/dynamixel_interface/: dynamixel_node.cpp
src/ros_interface/: amerigo_hardware_interface.cpp
src/ros_nodes/: amerigo_hardware_interface_node.cpp
