<?xml version="1.0"?>
<package format="2">
  <name>amerigo_control</name>
  <version>0.0.0</version>
  <description>The amerigo_control package</description>

  <maintainer email="hanzx@u.northwestern.edu">Zhengxiao Han</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>controller_manager</depend>
  <depend>amerigo_description</depend>
  <depend>amerigo_msgs</depend>
  <depend>dynamixel_sdk</depend>
</package>
